Add package url pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [metadata]
 name = wagtail_ace_editor
-version = 1.0.6
+version = 1.0.7
 description = An application made for the Django Web Framework.
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Nigel
 author_email = nigel@goodadvice.it
 license = GPL-3.0-only
+url = https://github.com/Nigel2392/wagtail_ace_editor
 classifiers =
     Environment :: Web Environment
     Framework :: Django
